# bvestl

./: .build.py  .gitignore  CMakeLists.txt  CONTROL  LICENSE  README.md  build.py  portfile.cmake
data/vcpkg/ports/eastl-polyalloc/: CONTROL  portfile.cmake
extras/variant-gen/: variant-gen.py
include/EASTL/polyalloc/: polyalloc.h
include/bvestl/: api.hpp
include/bvestl/polyalloc/: README.md  allocation_strategy.hpp  allocation_structs.hpp  block_allocation_strategy.hpp  block_allocator.hpp  bump_point_allocation_strategy.hpp  bump_point_allocator.hpp  bytes.hpp  cpu_allocated_memory.hpp  cpu_memory_allocator.hpp  mallocator.hpp  polyalloc.hpp  size_only_allocator.hpp  system_memory_allocator.hpp
include/bvestl/util/: inlining_util.hpp  memory_utils.hpp  platform.hpp  pp.hpp
src/polyalloc/: block_allocation_strategy.cpp  block_allocator.cpp  bump_point_allocation_strategy.cpp  bump_point_allocator.cpp  bytes.cpp  cpu_memory_allocator.cpp  mallocator.cpp  system_memory_allocator.cpp
tests/variant-gen/: simple_variant.hpp.ini
tools/cmake/: warnings.cmake
tools/docs/: build-docs.py
